# sky_object_detector

./: CMakeLists.txt  LICENSE  README.md
src/: ObjectDetector.cpp  ObjectDetector.hpp  main.cpp  utils.cpp  utils.h
